--- a/Test.ui.css
+++ b/Test.ui.css
@@ -1,3 +1,7 @@
+body {
+	overflow-y: scroll;
+}
+
 .Test_shadow {
 	box-shadow: 1px 1px 9px 2px #ccc;
 }
@@ -7,7 +11,7 @@ div.Test_holder {
 	border: 1px solid #ccc;
 	font: 12px Arial;
 	padding: 3px;
-	width: 400px;
+	width: 500px;
 	max-height: 400px;
 	overflow-y: auto;
 	cursor: default;
@@ -31,6 +35,8 @@ div.Test_holder table td {
 
 div.Test_holder table td.Test_test_name {
 	color: #336699;
+	text-align: left;
+	padding-left: 20px;
 }
 
 div.Test_holder table td.Test_number {
